--- a/src/app/pages/check-out/check-out-pallet-view/check-out-pallet-view.component.html
+++ b/src/app/pages/check-out/check-out-pallet-view/check-out-pallet-view.component.html
@@ -301,4 +301,4 @@
     </nb-card>
   </form>
 </section>
-
+<button nbButton  hero shape="semi-round" size="small" status="primary">Descarga Formato</button>
