--- a/src/app/pages/product/product-create/product-create.component.html
+++ b/src/app/pages/product/product-create/product-create.component.html
@@ -1,13 +1,17 @@
-<section>
-  <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-  <mat-card >
-    <mat-card-title>{{titulo}}</mat-card-title>
-    <mat-card-content>
-      <!--mat dialog content-->
-      <mat-dialog-content >
 
-      <!-- grid -->
-      <div class="row"></div>
+  <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+    <mat-dialog-content>
+      <div class="row" style="position: relative;">
+        <div class="col-md-12 col-lg-12 col-xxxl-12" style="position: relative;">
+          <nb-card status="primary">
+            <nb-card-header>{{titulo}}
+              <!--
+              <nb-badge text={{checkOut?.date}} status="danger" position="top left"></nb-badge>
+              -->
+            </nb-card-header>
+            <nb-card-body>
+                <!-- grid -->
+
       <div class="row">
         <div class="col-sm-12">
           <div class="form-group">
@@ -49,21 +53,19 @@
         </div>
 
       </div>
-      <!-- end grid-->
+                <!-- end grid-->
+            </nb-card-body>
+          </nb-card>
+        </div>
+      </div>
+    </mat-dialog-content>
 
-      </mat-dialog-content>
-      <!-- mat dialog content -->
-
-    </mat-card-content>
-
-    <!-- actions -->
-    <mat-card-actions align="end">
       <mat-dialog-actions align="end">
-        <button mat-flat-button [mat-dialog-close]="false" color="warn" >Cancelar</button>
-        <button mat-flat-button color="primary" cdkFocusInitial>{{actionBtn}}</button>
-      </mat-dialog-actions>
-    </mat-card-actions>
-    <!--end actions -->
-  </mat-card>
-</form>
-  </section>
+        <button nbButton hero shape="semi-round" size="small" status="danger"
+          [mat-dialog-close]="false" >Cancelar</button>
+
+        <button nbButton  hero shape="semi-round" size="small" status="primary"
+         cdkFocusInitial style="float: left;">{{actionBtn}}</button>
+
+    </mat-dialog-actions>
+  </form>
