--- a/src/app/pages/check-list/check-list-pallet-create/check-list-pallet-create.component.html
+++ b/src/app/pages/check-list/check-list-pallet-create/check-list-pallet-create.component.html
@@ -1,96 +1,97 @@
-<section>
-  <form [formGroup]="palletForm" (ngSubmit)="onSubmit()">
-  <mat-card>
-    <mat-card-title>Pallet</mat-card-title>
-    <mat-card-content>
-      <!--mat dialog content-->
-      <mat-dialog-content >
-        <div class="row">
-      <!-- grid -->
-      <div class="col-sm-3">
-        <mat-form-field appearance="legacy">
-          <mat-label>Lincecia</mat-label>
-          <input matInput  formControlName="ua">
-        </mat-form-field>
-    </div>
-    <div class="col-sm-3">
-       <mat-form-field appearance="legacy">
-          <mat-label>Cantidad * Tarima</mat-label>
-          <input matInput  formControlName="amount">
-        </mat-form-field>
-    </div>
-    <div class="col-sm-3">
-        <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
-          <mat-label>UM</mat-label>
-          <input type="text"
-                 placeholder="Selecciona UM"
-                 matInput
-                 formControlName="um"
-                 [matAutocomplete]="autoUM">
-          <mat-autocomplete #autoUM="matAutocomplete"
-          (optionSelected)="optionSelectedUMSave($event.option.value)"
-          [displayWith]="displayPropertyUM">
-            <mat-option *ngFor="let option of unities" [value]="option">
-              {{option.name}}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-    </div>
+<form [formGroup]="palletForm" (ngSubmit)="onSubmit()">
+    <mat-dialog-content>
+      <div class="row" style="position: relative;">
+        <div class="col-md-12 col-lg-12 col-xxxl-12" style="position: relative;">
+          <nb-card status="primary">
+            <nb-card-header>Pallet
+              <!--
+              <nb-badge text={{checkOut?.date}} status="danger" position="top left"></nb-badge>
+              -->
+            </nb-card-header>
+            <nb-card-body>
+              <div class="row">
+                <!-- grid -->
+                <div class="col-sm-3">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Lincecia</mat-label>
+                    <input matInput  formControlName="ua">
+                  </mat-form-field>
+              </div>
+              <div class="col-sm-3">
+                 <mat-form-field appearance="legacy">
+                    <mat-label>Cantidad * Tarima</mat-label>
+                    <input matInput  formControlName="amount">
+                  </mat-form-field>
+              </div>
+              <div class="col-sm-3">
+                  <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
+                    <mat-label>UM</mat-label>
+                    <input type="text"
+                           placeholder="Selecciona UM"
+                           matInput
+                           formControlName="um"
+                           [matAutocomplete]="autoUM">
+                    <mat-autocomplete #autoUM="matAutocomplete"
+                    (optionSelected)="optionSelectedUMSave($event.option.value)"
+                    [displayWith]="displayPropertyUM">
+                      <mat-option *ngFor="let option of unities" [value]="option">
+                        {{option.name}}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+              </div>
 
-    <div class="col-sm-3">
-        <mat-form-field appearance="legacy">
-          <mat-label>lote</mat-label>
-          <input matInput  formControlName="lote">
-        </mat-form-field>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-        <mat-form-field appearance="legacy">
-          <mat-label>Caducidad</mat-label>
-          <input matInput type="date"  formControlName="expiration">
-        </mat-form-field>
-    </div>
+              <div class="col-sm-3">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>lote</mat-label>
+                    <input matInput  formControlName="lote">
+                  </mat-form-field>
+              </div>
+              </div>
+              <div class="row">
+              <div class="col-sm-3">
+                  <mat-form-field appearance="legacy">
+                    <mat-label>Caducidad</mat-label>
+                    <input matInput type="date"  formControlName="expiration">
+                  </mat-form-field>
+              </div>
 
-    <div class="col-sm-3">
-        <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
-          <mat-label>Producto</mat-label>
-          <input type="text"
-                 placeholder="Selecciona Producto"
-                 matInput
-                 formControlName="producto"
-                 [matAutocomplete]="autoProducto">
-          <mat-autocomplete #autoProducto="matAutocomplete"
-          (optionSelected)="optionSelectedProductSave($event.option.value)"
-          [displayWith]="displayPropertyProduct">
-            <mat-option *ngFor="let option of products" [value]="option">
-              {{option.name}}
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-    </div>
-    <div class="col-sm-3">
-      <mat-form-field appearance="legacy">
-        <mat-label>Codigo</mat-label>
-        <input matInput [disabled]="true" formControlName="codigo">
-      </mat-form-field>
-  </div>
-  </div>
-      <!-- end grid-->
+              <div class="col-sm-3">
+                  <mat-form-field class="example-full-width" #field floatLabel="always" appearance="legacy" >
+                    <mat-label>Producto</mat-label>
+                    <input type="text"
+                           placeholder="Selecciona Producto"
+                           matInput
+                           formControlName="producto"
+                           [matAutocomplete]="autoProducto">
+                    <mat-autocomplete #autoProducto="matAutocomplete"
+                    (optionSelected)="optionSelectedProductSave($event.option.value)"
+                    [displayWith]="displayPropertyProduct">
+                      <mat-option *ngFor="let option of products" [value]="option">
+                        {{option.name}}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+              </div>
+              <div class="col-sm-3">
+                <mat-form-field appearance="legacy">
+                  <mat-label>Codigo</mat-label>
+                  <input matInput [disabled]="true" formControlName="codigo">
+                </mat-form-field>
+            </div>
+              </div>
+            </nb-card-body>
+          </nb-card>
+        </div>
+      </div>
+    </mat-dialog-content>
 
-      </mat-dialog-content>
-      <!-- mat dialog content -->
-
-    </mat-card-content>
-
-    <!-- actions -->
-    <mat-card-actions align="end">
       <mat-dialog-actions align="end">
-        <button mat-flat-button [mat-dialog-close]="false" color="warn" >Cancelar</button>
-        <button mat-flat-button color="primary" cdkFocusInitial>{{actionBtn}}</button>
-      </mat-dialog-actions>
-    </mat-card-actions>
-    <!--end actions -->
-  </mat-card>
-</form>
-  </section>
+        <button nbButton hero shape="semi-round" size="small" status="danger"
+          [mat-dialog-close]="false" >Cancelar</button>
+
+        <button nbButton  hero shape="semi-round" size="small" status="primary"
+         cdkFocusInitial style="float: left;">{{actionBtn}}</button>
+
+    </mat-dialog-actions>
+    </form>
