--- a/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.html
+++ b/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.html
@@ -1,5 +1,5 @@
 <div class="row" style="position: relative;">
-  <div class="col-md-12 col-lg-12 col-xxxl-12" style="position: relative;">
+  <div class="col-md-6 col-lg-6 col-xxxl-6" style="position: relative;">
     <nb-card status="primary">
       <nb-card-header>Remision
 
@@ -7,8 +7,7 @@
       <nb-card-body>
               <!-- grid -->
               <div class="row">
-
-                <div class="col-sm-3">
+                <div class="col-sm-6">
                   <div class="form-group">
                   <mat-form-field>
                     <mat-label>Tipo de Busqueda</mat-label>
@@ -30,9 +29,11 @@
                   </mat-form-field>
                   </div>
                 </div>
+                </div>
 
-                <div class="col-sm-3" *ngIf="remisionVisible">
-                  <div class="form-group">
+            <div class="row">
+              <div class="col-sm-6">
+              <div class="form-group" *ngIf="remisionVisible">
 
                <mat-form-field class="example-full-width" appearance="legacy" >
                 <mat-label>Remision</mat-label>
@@ -43,9 +44,11 @@
               </mat-form-field>
                   </div>
                 </div>
+            </div>
 
-                <div class="col-sm-3" *ngIf="fechaVisible">
-                  <div class="form-group">
+            <div class="row">
+                <div class="col-sm-6" >
+                  <div class="form-group" *ngIf="fechaVisible">
                     <mat-form-field class="example-full-width" appearance="legacy" >
                       <mat-label>Fecha</mat-label>
                       <input type="date" matInput [formControl]="fechaControl"
@@ -55,9 +58,11 @@
                     </mat-form-field>
                   </div>
                 </div>
+            </div>
 
-                <div class="col-sm-3" *ngIf="loteVisible">
-                  <div class="form-group">
+            <div class="row">
+                <div class="col-sm-6">
+                  <div class="form-group"  *ngIf="loteVisible">
                     <mat-form-field class="example-full-width" appearance="legacy" >
                       <mat-label>Lote</mat-label>
                       <input  matInput [formControl]="loteControl"
@@ -67,9 +72,12 @@
                     </mat-form-field>
                   </div>
                 </div>
+            </div>
 
-                <div class="col-sm-3" *ngIf="transportLineVisible">
-                  <div class="form-group">
+
+            <div class="row">
+                <div class="col-sm-6" >
+                  <div class="form-group" *ngIf="transportLineVisible">
                     <mat-form-field class="example-full-width" appearance="legacy" >
                       <mat-label>Linea de Transporte</mat-label>
                       <input type="text"
@@ -90,9 +98,10 @@
                     </mat-form-field>
                   </div>
                 </div>
-
-                <div class="col-sm-3" *ngIf="productVisible">
-                  <div class="form-group">
+            </div>
+            <div class="row">
+                <div class="col-sm-6" >
+                  <div class="form-group" *ngIf="productVisible">
                     <mat-form-field class="example-full-width" appearance="legacy" >
                     <mat-label>Producto</mat-label>
                     <input type="text"
@@ -113,14 +122,14 @@
                   </mat-form-field>
                   </div>
                 </div>
-               </div>
+            </div>
             <!-- actions -->
-            <mat-card-actions align="end">
+
               <mat-dialog-actions align="end">
-                <button mat-flat-button color="warn" >Limpiar</button>
-                <button mat-flat-button color="primary" (click)="onSubmit()">{{actionBtn}}</button>
+                <button nbButton  hero shape="semi-round" size="small" status="danger" >Limpiar</button>
+                <button nbButton  hero shape="semi-round" size="small" status="primary" (click)="onSubmit()">{{actionBtn}}</button>
               </mat-dialog-actions>
-            </mat-card-actions>
+
             <!--end actions -->
 
       </nb-card-body>
@@ -129,14 +138,14 @@
 </div>
 
 
-<div class="col-md-12">
 
-  <nb-card accent="primary">
-      <nb-card-header>{{titulo}} </nb-card-header>
+
+  <nb-card status="primary">
+      <nb-card-header>Pallets Disponibles</nb-card-header>
       <nb-card-body>
         <section *ngIf="selection.selected.length>0">
           <div class="example-button-row">
-            <button di mat-flat-button color="primary"  (click)="save()" >Agregar {{selection.selected.length}}</button>
+            <button nbButton  hero shape="semi-round" size="small" status="primary"  (click)="save()" >Agregar {{selection.selected.length}}</button>
           </div>
         </section>
           <section>
@@ -233,7 +242,7 @@
           </section>
       </nb-card-body>
   </nb-card>
-</div>
+
 
 
 
