--- a/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.scss
+++ b/src/app/pages/check-out/check-out-pallet-test/check-out-pallet-test.component.scss
@@ -1,3 +1,82 @@
 table {
   width: 100%;
 }
+.mat-form-field {
+  font-size: 14px;
+  width: 35%;
+}
+button {
+  margin-right: 8px;
+}
+
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
+}
+
+.example-container .mat-form-field {
+  width: 220px;
+}
+
+.example-container form {
+  margin-bottom: 20px;
+}
+
+.example-container form > * {
+  margin: 5px 0;
+}
+
+.example-container .mat-radio-button {
+  margin: 0 8px;
+}
+.mat-form-field {
+  font-size: 12px;
+  width: 100%;
+}
+@import '../../../@theme/styles/themes';
+@import '~bootstrap/scss/mixins/breakpoints';
+@import '~@nebular/theme/styles/global/breakpoints';
+
+@include nb-install-component() {
+  .position-select {
+    min-width: 13rem;
+  }
+
+  .label {
+    display: block;
+  }
+
+  nb-card-footer button:first-child {
+    @include nb-ltr(margin-right, 1rem);
+    @include nb-rtl(margin-left, 1rem);
+  }
+}
+
+.full-width {
+  display: flex;
+  margin-left: 10px;
+}
+
+.radio-container {
+  position: relative;
+}
+
+.flex-wrap {
+
+  display: flex;
+  flex-direction: row;
+  margin: -1px 1px;
+  height: 20px;
+
+}
+
+.radio-button {
+  margin-left: 1px;
+
+}
+
+.wrap-label-text {
+  white-space: normal;
+}
+
+
