--- a/src/app/pages/check-out/check-out-pallet/check-out-pallet.component.html
+++ b/src/app/pages/check-out/check-out-pallet/check-out-pallet.component.html
@@ -1,28 +1,33 @@
-<section>
-  <h5 mat-dialog-title mat-card-title>Remision De Salida {{result[0].checkOutRemision}} </h5>
+<mat-dialog-content>
 
-      <!--mat dialog content-->
-      <mat-dialog-content mat-card-content>
-        <p>
-          {{message}}
-        </p>
+        <nb-card status="primary">
+          <nb-card-header>Remision De Salida
 
-          <div class="row" *ngFor="let item of map | keyvalue">
-            <div class="col-sm-12">Remision : {{item.key}} Total :
-              <nb-tag status="primary" size="small" appearance="filled" text={{item.value.length}}></nb-tag>
+            <nb-badge text={{result[0].checkOutRemision}} status="warning"></nb-badge>
 
+          </nb-card-header>
+          <nb-card-body>
+            <p>
+              {{message}}
+            </p>
+            <div class="row" *ngFor="let item of map | keyvalue">
+              <div class="col-sm-6"><b>Remision : {{item.key}} </b></div>
+              <div class="col-sm-3">Total</div>
+              <div class="col-sm-3">
+                <nb-tag status="primary" size="small" appearance="filled" text={{item.value.length}}></nb-tag>
+              </div>
             </div>
 
-          </div>
+          </nb-card-body>
+        </nb-card>
+  </mat-dialog-content>
 
+  <mat-dialog-actions align="end">
+    <button nbButton hero shape="semi-round" size="small" status="danger"
+      [mat-dialog-close]="false" >Cancelar</button>
 
-      </mat-dialog-content>
-      <!-- mat dialog content -->
+    <button nbButton  hero shape="semi-round" size="small" status="primary"
+     cdkFocusInitial style="float: left;" [disabled]="!disabled" (click)="guardar()">Si, Guardar</button>
 
+</mat-dialog-actions>
 
-      <mat-dialog-actions align="end">
-        <button mat-flat-button [mat-dialog-close]="false" color="primary" >Cancelar</button>
-        <button mat-flat-button color="warn" cdkFocusInitial style="float: left;" [disabled]="!disabled" (click)="guardar()">Si, Guardar</button>
-      </mat-dialog-actions>
-
-</section>
