--- a/src/app/pages/clients/client-delete/client-delete.component.html
+++ b/src/app/pages/clients/client-delete/client-delete.component.html
@@ -13,6 +13,6 @@
     <button nbButton hero shape="semi-round" size="small" status="danger"
       [mat-dialog-close]="false" >Cancelar</button>
     <button nbButton  hero shape="semi-round" size="small" status="primary"
-     cdkFocusInitial style="float: left;" (click)="deleteClient()">Si, Finalizar</button>
+     cdkFocusInitial style="float: left;" (click)="deleteClient()">Si, Eliminar</button>
 </mat-dialog-actions>
 
