--- a/src/app/pages/transport-lines/transport-line-delete/transport-line-delete.component.html
+++ b/src/app/pages/transport-lines/transport-line-delete/transport-line-delete.component.html
@@ -1,19 +1,18 @@
-<section>
+<mat-dialog-content nb-card status="danger" class="mat-typography">
+  <nb-card status="danger">
+    <nb-card-header>Eliminar {{nombreModel}}</nb-card-header>
+    <nb-card-body class="example-items-rows">
+      <p>
+        Seguro que deseas eliminar: {{contentDelete}} ?
+      </p>
+    </nb-card-body>
+  </nb-card>
+</mat-dialog-content>
 
-  <h5 mat-dialog-title mat-card-title>Eliminar {{nombreModel}} </h5>
+<mat-dialog-actions align="end">
+    <button nbButton hero shape="semi-round" size="small" status="danger"
+      [mat-dialog-close]="false" >Cancelar</button>
+    <button nbButton  hero shape="semi-round" size="small" status="primary"
+     cdkFocusInitial style="float: left;" (click)="deleteTransportLine()">Si, Eliminar</button>
+</mat-dialog-actions>
 
-      <!--mat dialog content-->
-      <mat-dialog-content mat-card-content>
-        <p>
-          Seguro que deseas eliminar: {{contentDelete}} ?
-        </p>
-      </mat-dialog-content>
-      <!-- mat dialog content -->
-
-
-      <mat-dialog-actions align="end">
-        <button mat-flat-button [mat-dialog-close]="false" color="primary" >Cancelar</button>
-        <button mat-flat-button color="warn" cdkFocusInitial style="float: left;" (click)="deleteTransportLine()">Si, Eliminar</button>
-      </mat-dialog-actions>
-
-</section>
