--- a/src/app/pages/transport-types/transport-type-capacity/transport-type-capacity.component.html
+++ b/src/app/pages/transport-types/transport-type-capacity/transport-type-capacity.component.html
@@ -1,81 +1,86 @@
-<mat-card>
-  <mat-card-title>Capicidades de transporte </mat-card-title>
-  <mat-card-subtitle>{{transportType.name}}</mat-card-subtitle>
-  <mat-card-content align="end">
+<nb-card status="primary">
+  <nb-card-header>Capicidades de transporte
+    <nb-badge text={{transportType.name}} status="danger" style="position: relative;"></nb-badge>
+  </nb-card-header>
+
+  <nb-card-body>
     <section>
       <div class="example-button-row">
-          <button mat-flat-button color="primary" (click)="openDialog()">Agregar</button>
+        <button nbButton hero shape="semi-round" size="small" status="primary" (click)="openDialog()">Agregar</button>
+
       </div>
   </section>
-    <mat-form-field appearance="standard">
-      <mat-label>Buscar </mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-  </mat-form-field>
-    <div class="mat-elevation-z8">
+  <section>
+      <!-- filter -->
+      <mat-form-field appearance="standard">
+        <mat-label>Buscar </mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
+      </mat-form-field>
+  </section>
+  <div class="mat-elevation-z8">
 
-      <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
-          <!-- Id Column -->
-          <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-              <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-          </ng-container>
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="capacity">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> CAPACIDAD </th>
-              <td mat-cell *matCellDef="let element"> {{element.capacity}} </td>
-          </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="capacity">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> CAPACIDAD </th>
+            <td mat-cell *matCellDef="let element"> {{element.capacity}} </td>
+        </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="unity">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> UNIDAD DE MEDIDA </th>
-              <td mat-cell *matCellDef="let element">
-                <nb-tag-list>
-                  <nb-tag status="primary" appearance="outline"  text="{{element.unity}}"></nb-tag>
-                </nb-tag-list>
-              </td>
-          </ng-container>
-
-          <!-- isActive Column -->
-          <ng-container matColumnDef="isActive">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> ACTIVO </th>
-              <td mat-cell *matCellDef="let element">
-                <nb-tag-list>
-                  <nb-tag status="primary" appearance="outline" *ngIf="element.isActive" text="Activo"></nb-tag>
-                  <nb-tag status="warning" appearance="outline" *ngIf="!element.isActive" text="Inactivo"></nb-tag>
-                </nb-tag-list>
-              </td>
-          </ng-container>
-
-          <!-- isActive Column -->
-          <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
+        <!-- Name Column -->
+        <ng-container matColumnDef="unity">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> UNIDAD DE MEDIDA </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" (click)="editarTransportCapacity(element)">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" (click)="deleteTransportCapacity(element)"
-                    [disabled]="element.isActive === false">
-                    <mat-icon>delete</mat-icon>
-                </button>
+              <nb-badge  status="success" style="position:static;" text={{element.unity}}></nb-badge>
             </td>
         </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
+        <!-- isActive Column -->
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
+          <td mat-cell *matCellDef="let element">
+            <nb-badge  status="primary" style="position:static;" *ngIf="element.isActive" text="Activo"></nb-badge>
+            <nb-badge  status="warning"  style="position:static;" *ngIf="!element.isActive" text="Inactivo"></nb-badge>
+          </td>
+        </ng-container>
 
-          </tr>
-      </table>
-      <!--Paginator -->
-      <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual"
-          [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" aria-label="arialLabel"
-          showFirstLastButtons>
-      </mat-paginator>
-      <!--End Paginator -->
+        <!-- isActive Column -->
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="primary" (click)="editarTransportCapacity(element)">
+                  <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" (click)="deleteTransportCapacity(element)"
+                  [disabled]="element.isActive === false">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </td>
+      </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-  </div>
-  </mat-card-content>
-</mat-card>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
+
+        </tr>
+    </table>
+    <!--Paginator -->
+    <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual"
+        [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" aria-label="arialLabel"
+        showFirstLastButtons>
+    </mat-paginator>
+    <!--End Paginator -->
+
+</div>
+  </nb-card-body>
+</nb-card>
+
+
+
