--- a/src/app/pages/users/users-main/users-main.component.html
+++ b/src/app/pages/users/users-main/users-main.component.html
@@ -1,105 +1,104 @@
-<div class="col-md-12">
-    <nb-card accent="primary">
-        <nb-card-header>{{titulo}} </nb-card-header>
-        <nb-card-body>
-            <section>
-                <div class="example-button-row">
-                    <button mat-flat-button color="primary" (click)="openDialog()">Agregar</button>
-                </div>
-            </section>
-            <section>
-                <!-- filter -->
-                <mat-form-field appearance="standard">
-                    <mat-label>Buscar </mat-label>
-                    <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-                </mat-form-field>
-                <!-- end filter -->
-                <div class="mat-elevation-z8">
-                    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
-                        <!-- Id Column -->
-                        <ng-container matColumnDef="id">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="username">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> USERNAME </th>
-                          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
-                      </ng-container>
+<nb-card status="primary">
+  <nb-card-header>{{titulo}}</nb-card-header>
+  <nb-card-body>
+    <section>
+      <div class="example-button-row">
+        <button nbButton hero shape="semi-round" size="small" status="primary" (click)="openDialog()">Agregar</button>
+
+      </div>
+  </section>
+  <section>
+      <!-- filter -->
+      <mat-form-field appearance="standard">
+        <mat-label>Buscar </mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Buscar" #input>
+      </mat-form-field>
+  </section>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> USERNAME </th>
+          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+      </ng-container>
 
 
-                        <!-- name Column -->
-                        <ng-container matColumnDef="firstName" >
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
-                            <td mat-cell *matCellDef="let element">
-                               {{element.firstName}} {{element.additionalName}} {{element.lastName}} {{element.secondName}} </td>
-                        </ng-container>
+        <!-- name Column -->
+        <ng-container matColumnDef="firstName" >
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
+            <td mat-cell *matCellDef="let element">
+               {{element.firstName}} {{element.additionalName}} {{element.lastName}} {{element.secondName}} </td>
+        </ng-container>
 
-                        <ng-container matColumnDef="profession">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> PUESTO </th>
-                          <td mat-cell *matCellDef="let element">
-                             {{element.profession.name}}   </td>
-                      </ng-container>
-                        <!-- isActive Column -->
-                        <ng-container matColumnDef="isActive">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> ESTATUS </th>
-                            <td mat-cell *matCellDef="let element">
-                              <nb-tag-list>
-                                <nb-tag status="primary" appearance="outline" *ngIf="element.isActive" text="Activo"></nb-tag>
-                                <nb-tag status="warning" appearance="outline" *ngIf="!element.isActive" text="Inactivo"></nb-tag>
-                              </nb-tag-list>
-                            </td>
-                        </ng-container>
-                        <ng-container matColumnDef="isUser">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> USUARIO </th>
-                          <td mat-cell *matCellDef="let element">
-                            <nb-tag-list>
-                              <nb-tag status="primary" appearance="outline" *ngIf="element.isUser" text="Usuario"></nb-tag>
-                              <nb-tag status="warning" appearance="outline" *ngIf="!element.isUser" text="Sin Usuario"></nb-tag>
-                            </nb-tag-list>
-                          </td>
-                      </ng-container>
-                        <ng-container matColumnDef="isResponsible">
-                          <th mat-header-cell *matHeaderCellDef mat-sort-header> RESPONSABLE </th>
-                          <td mat-cell *matCellDef="let element">
+        <ng-container matColumnDef="profession">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> PUESTO </th>
+          <td mat-cell *matCellDef="let element">
+             {{element.profession.name}}   </td>
+      </ng-container>
+        <!-- isActive Column -->
+        <!-- isActive Column -->
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef> ESTATUS </th>
+          <td mat-cell *matCellDef="let element">
+            <nb-badge  status="primary" style="position:static;" *ngIf="element.isActive" text="Activo"></nb-badge>
+            <nb-badge  status="warning"  style="position:static;" *ngIf="!element.isActive" text="Inactivo"></nb-badge>
+          </td>
+        </ng-container>
 
-                              <nb-tag-list>
-                                <nb-tag status="primary" appearance="outline" *ngIf="element.isResponsible" text="Activo"></nb-tag>
-                                <nb-tag status="warning" appearance="outline" *ngIf="!element.isResponsible" text="Inactivo"></nb-tag>
-                              </nb-tag-list>
-                          </td>
-                      </ng-container>
-                        <!-- isActive Column -->
-                        <ng-container matColumnDef="actions">
-                            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
-                            <td mat-cell *matCellDef="let element">
-                                <button mat-icon-button color="primary" (click)="editarClient(element)">
-                                    <mat-icon>edit</mat-icon>
-                                </button>
-                                <button mat-icon-button color="warn" (click)="deleteClient(element)"
-                                    [disabled]="element.isActive === false">
-                                    <mat-icon>delete</mat-icon>
-                                </button>
-                            </td>
-                        </ng-container>
 
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <ng-container matColumnDef="isUser">
+          <th mat-header-cell *matHeaderCellDef> USUARIO </th>
+          <td mat-cell *matCellDef="let element">
+            <nb-badge  status="primary" style="position:static;" *ngIf="element.isUser" text="Usuario"></nb-badge>
+            <nb-badge  status="warning"  style="position:static;" *ngIf="!element.isUser" text="Sin Usuario"></nb-badge>
+          </td>
+        </ng-container>
 
-                        <!-- Row shown when there is no matching data. -->
-                        <tr class="mat-row" *matNoDataRow>
-                            <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
 
-                        </tr>
-                    </table>
-                    <!--Paginator -->
-                    <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual"
-                        [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" aria-label="arialLabel"
-                        showFirstLastButtons>
-                    </mat-paginator>
-                    <!--End Paginator -->
 
-                </div>
-            </section>
-        </nb-card-body>
-    </nb-card>
+        <ng-container matColumnDef="isResponsible">
+          <th mat-header-cell *matHeaderCellDef> RESPONSABLE </th>
+          <td mat-cell *matCellDef="let element">
+            <nb-badge  status="primary" style="position:static;" *ngIf="element.isResponsible" text="Activo"></nb-badge>
+            <nb-badge  status="warning"  style="position:static;" *ngIf="!element.isResponsible" text="Inactivo"></nb-badge>
+          </td>
+        </ng-container>
+
+        <!-- isActive Column -->
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" (click)="editarClient(element)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" (click)="deleteClient(element)"
+                    [disabled]="element.isActive === false">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No se encontraron coincidencias "{{input.value}}"</td>
+
+        </tr>
+    </table>
+    <!--Paginator -->
+    <mat-paginator [length]="totalRegistros" [pageSize]="totalPorPagina" [pageIndex]="paginaActual"
+        [pageSizeOptions]="pageSizeOptions" (page)="paginar($event)" aria-label="arialLabel"
+        showFirstLastButtons>
+    </mat-paginator>
+    <!--End Paginator -->
+
 </div>
+  </nb-card-body>
+</nb-card>
